fix overflow scroll

--- a/public/style.css
+++ b/public/style.css
@@ -86,6 +86,7 @@ input {
   font-weight: bold;
   font-size: 21px;
   height: 200px;
+  overflow-x: scroll;
 }
 #fb-profile>p{
   margin:0px;
